--- a/SVM_Tweets/tweets_analysis.ipynb
+++ b/SVM_Tweets/tweets_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "id": "45510ea2",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,31 @@
     "\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix, precision_recall_fscore_support, roc_curve, auc"
+    "from sklearn.metrics import accuracy_score, precision_recall_fscore_support\n",
+    "from sklearn.naive_bayes import GaussianNB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "506e3f2d",
+   "metadata": {},
+   "source": [
+    "El presente proyecto consiste en aplicar la metodología propuesta en el artículo Manochandar et al. \"Scaling feature selection method for enhancing the classification performance of Support Vector Machines in text mining\".\n",
+    "\n",
+    "El objetivo principal consiste en selecionar el número mínimo de características para clasificar reseñas (comentarios) de una manera efectiva. Para esto, se utilizarán los métodos tf-idf y Glasgow  para la selección de características en la minería de opiniones.\n",
+    "\n",
+    "El conjunto de datos elegido consiste en tweet de ususarios de Amazon que adquirieron productos y han dejado comentarios al respecto. Estos comentarios fueron etiquetados como \"Negativos\" y \"Positivos\". En total se tiene un conjunto de datos balanceado.\n",
+    "\n",
+    "A continuación leeremos los tweets y mostraremos su respectiva clase 0 O 1, correspondiendo a \"Negativos\" o \"Positivos\" respectivamente.\n",
+    "\n",
+    "<!-- Realizar las siguientes tareas:\n",
+    "\n",
+    "1.Elegir 100 tuist y clasificarlos de manera subjetiva como positivo o negativo\n",
+    "2.Aplicar un análisis descriptivos sobre los 100 tuist.\n",
+    "3.Presentar una clasificación mediante un clasificador Naive Bayes\n",
+    "Describir en que consiste las representaciones gráficas para reducir el tamaño del conjunto de características.\n",
+    "\n",
+    " Discutir la forma cómo la precisión de las expresiones se mejoran a través de la técnica de máquina de vectores de soporte. -->"
    ]
   },
   {
@@ -163,8 +187,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7c2c6417",
+   "metadata": {},
+   "source": [
+    "Siguiendo la metodología del artículo, realizamos ahora un proceso de pre-procesamiento de los mensajes, eliminando caracteres, puntuaciones, tokenizando, removiendo \"stopwords\" y por ultimo haciendo \"stemming\"."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 63,
    "id": "ff77c01c",
    "metadata": {},
    "outputs": [],
@@ -176,6 +208,14 @@
     "    tokens = re.split('\\W+', text_rc)    # tokenization\n",
     "    text = [ps.stem(word) for word in tokens if word not in stopword]  # remove stopwords and stemming\n",
     "    return text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "946e1c0a",
+   "metadata": {},
+   "source": [
+    "A continuación una función que retorna las features mas probables y su crf. "
    ]
   },
   {
@@ -208,6 +248,14 @@
     "    probs[\"probs2\"] = probs[\"Probs\"] / probs[\"Probs\"].sum()\n",
     "    probs[\"crf\"] = probs[\"probs2\"].cumsum()\n",
     "    return count_vect_df, probs\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "463bb758",
+   "metadata": {},
+   "source": [
+    "Con el crf calculado, se aplica el **método gráfico** que indica el articulo, el cual consiste en analizar la curva de las probabilidades acumuladas. Especificamente, se analiza la recta tangente y se toma como el número optimo de características cuando la curva empiece a tender a una posicion horizontal. En este caso decidimos tomar 1000."
    ]
   },
   {
@@ -265,39 +313,118 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "2b03f011",
+   "cell_type": "markdown",
+   "id": "3f9e5553",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
-    "X, y = mop1.values, df[\"class\"].values\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "clf = SVC()\n",
-    "clf.fit(X, y)\n",
-    "y_pred = clf.predict(X_test)\n",
-    "\"\"\" \n",
-    "-----   Metrics  -----\n",
-    "\"\"\"   \n",
-    "acc = accuracy_score(y_test, y_pred)\n",
-    "prf = precision_recall_fscore_support(y_test, y_pred,zero_division=0.0)\n",
-    "pre, spe, sen, f1s = prf[0][1], prf[1][0], prf[1][1], prf[2][1]\n",
-    "\n",
-    "metrics_df = pd.DataFrame({'Recall': [sen],                    \n",
-    "                    'Precision': [pre],\n",
-    "                    'Accuracy': [acc],\n",
-    "                    'F1-Score': [f1s]})\n",
-    "metrics_df\n"
+    "Una vez hecho el método gráfico, analizaremos las métricas de clasificación utilizando Naive Bayes y SVM como indica el articulo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 66,
+   "id": "2b03f011",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_metrics(df,mop):\n",
+    "    X, y = mop.values, df[\"class\"].values\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "    for name_clf, clf in zip([\"NAIVE BAYES\",\"SVM\"],[GaussianNB(),SVC()]):        \n",
+    "        clf.fit(X, y)\n",
+    "        y_pred = clf.predict(X_test)\n",
+    "        \"\"\" \n",
+    "        -----   Metrics  -----\n",
+    "        \"\"\"   \n",
+    "        acc = accuracy_score(y_test, y_pred)\n",
+    "        prf = precision_recall_fscore_support(y_test, y_pred,zero_division=0.0)\n",
+    "        pre, spe, sen, f1s = prf[0][1], prf[1][0], prf[1][1], prf[2][1]\n",
+    "\n",
+    "        metrics_df = pd.DataFrame({'Recall': [sen],                    \n",
+    "                            'Precision': [pre],\n",
+    "                            'Accuracy': [acc],\n",
+    "                            'F1-Score': [f1s]})\n",
+    "        print(f\"Results using: {name_clf}'\")            \n",
+    "        display(metrics_df)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17c052de",
+   "metadata": {},
+   "source": [
+    "Utilizando la formula de **Glasgow** "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "id": "2da78656",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results using: NAIVE BAYES'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>F1-Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.95082</td>\n",
+       "      <td>0.975</td>\n",
+       "      <td>0.97479</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Recall  Precision  Accuracy  F1-Score\n",
+       "0     1.0    0.95082     0.975   0.97479"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results using: SVM'\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -342,12 +469,140 @@
        "0     1.0   0.935484  0.966667  0.966667"
       ]
      },
-     "execution_count": 57,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "calculate_metrics(df = df, mop = mop1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e455823",
+   "metadata": {},
+   "source": [
+    "Utilizando **tf-idf**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "771b9bc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results using: NAIVE BAYES'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>F1-Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.95082</td>\n",
+       "      <td>0.975</td>\n",
+       "      <td>0.97479</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Recall  Precision  Accuracy  F1-Score\n",
+       "0     1.0    0.95082     0.975   0.97479"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results using: SVM'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>F1-Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.983333</td>\n",
+       "      <td>0.983051</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Recall  Precision  Accuracy  F1-Score\n",
+       "0     1.0   0.966667  0.983333  0.983051"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "calculate_metrics(df = df, mop = mop2)"
+   ]
   }
  ],
  "metadata": {
